fixing linear gradient overflow into scrollbar

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
   text-decoration: none;
 }
 body {
-  background-color: rgb(0, 0, 0);
   height: 100vh;
   justify-content: center;
   align-items: center;
@@ -31,6 +30,9 @@ body {
   justify-content: flex-start;
   height: 100vh;
   width: 100vw;
+  background-image: unset;
+  background-color: unset;
+  background-blend-mode: unset;
 }
 .left-nav {
   width: 30%;
@@ -217,19 +219,26 @@ header {
 }
 
 /* Scrollbar-styling */
+
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
 }
 
 /* Track */
-::-webkit-scrollbar-track {
+/* ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px rgb(0, 0, 0);
   border-radius: 6px;
-}
+} */
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #2f65ef;
   border-radius: 10px;
+}
+
+.user-list::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 5px rgb(0, 0, 0); */
+  background-color: rgb(241, 237, 237);
+  border-radius: 6px;
 }
